# Machine-Learnia

./: .gitignore  README.md
Module 1 - Les 6 Piliers de l'IA/La méthodologie de l'IA/: pyproject.toml
Module 1 - Les 6 Piliers de l'IA/La méthodologie de l'IA/Analyse de données/: Analyse Multivariée.ipynb  Analyse Univariée.ipynb  exercice 1 - Health Expectation - analyse.ipynb  exercice 2 - MPG - analyse.ipynb
Module 1 - Les 6 Piliers de l'IA/La méthodologie de l'IA/Formuler et terter des hypothèses/: exercice 1 - Health Expectation - test.ipynb  exercice 2 - MPG - test.ipynb
