[project]
name = "la_methodologie_de_l_ia"
version = "0.1.0"
description = "machine learnia module 1 - 1"
authors = [
    {name = "Kevin Collard",email = "kevincollarddev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (==1.5.3)",
    "matplotlib (==3.7.0)",
    "seaborn (==0.12.2)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "numpy (==1.26.4)",
    "nbconvert (>=7.16.6,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
notebook = "^7.3.3"

